--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "postcss": "^8.4.14",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
